@@ -1,6 +1,5 @@
 package com.objectcomputing.checkins.services.permissions;
 
-import com.objectcomputing.checkins.security.permissions.Permissions;
 import com.objectcomputing.checkins.services.TestContainersSuite;
 import com.objectcomputing.checkins.services.fixture.MemberProfileFixture;
 import com.objectcomputing.checkins.services.fixture.PermissionFixture;
@@ -22,6 +21,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -37,20 +37,18 @@ public class PermissionsControllerTest extends TestContainersSuite implements Pe
     void testGetAllPermissionsEnsureAlphabeticalOrder() {
         // create role and permissions
         Role memberRole = createRole(new Role(RoleType.MEMBER.name(), "Member Role"));
-        Permission someTestPermission = createACustomPermission(Permissions.CAN_VIEW_ROLE_PERMISSIONS);
-        Permission someOtherPermission = createACustomPermission(Permissions.CAN_VIEW_PERMISSIONS);
         setPermissionsForMember(memberRole.getId());
 
         // assign role to user
         MemberProfile user = createADefaultMemberProfile();
         assignMemberRole(user);
 
-        List<Permission> expected = new ArrayList<>(Arrays.asList(someOtherPermission, someTestPermission));
+        List<PermissionDTO> expected = List.of(Permission.values()).stream().map((permission) -> new PermissionDTO(permission)).collect(Collectors.toList());
         final HttpRequest<Object> request = HttpRequest.
                 GET("/OrderByPermission").basicAuth(user.getWorkEmail(), RoleType.Constants.MEMBER_ROLE);
 
-        final HttpResponse<List<Permission>> response =
-                client.toBlocking().exchange(request, Argument.listOf(Permission.class));
+        final HttpResponse<List<PermissionDTO>> response =
+                client.toBlocking().exchange(request, Argument.listOf(PermissionDTO.class));
 
         assertEquals(HttpStatus.OK, response.getStatus());
         assertTrue(response.getBody().isPresent());
@@ -71,20 +69,18 @@ public class PermissionsControllerTest extends TestContainersSuite implements Pe
     void testGetAllPermissions() {
         // create role and permissions
         Role memberRole = createRole(new Role(RoleType.MEMBER.name(), "Member Role"));
-        Permission someTestPermission = createACustomPermission(Permissions.CAN_VIEW_ROLE_PERMISSIONS);
-        Permission someOtherPermission = createACustomPermission(Permissions.CAN_VIEW_PERMISSIONS);
         setPermissionsForMember(memberRole.getId());
 
         // assign role to user
         MemberProfile user = createADefaultMemberProfile();
         assignMemberRole(user);
 
-        List<Permission> expected = new ArrayList<>(Arrays.asList(someTestPermission, someOtherPermission));
+        List<PermissionDTO> expected = List.of(Permission.values()).stream().map((permission) -> new PermissionDTO(permission)).collect(Collectors.toList());
         final HttpRequest<Object> request = HttpRequest.
                 GET("/").basicAuth(user.getWorkEmail(), RoleType.Constants.MEMBER_ROLE);
 
-        final HttpResponse<List<Permission>> response =
-                client.toBlocking().exchange(request, Argument.listOf(Permission.class));
+        final HttpResponse<List<PermissionDTO>> response =
+                client.toBlocking().exchange(request, Argument.listOf(PermissionDTO.class));
 
         assertEquals(HttpStatus.OK, response.getStatus());
         assertTrue(response.getBody().isPresent());
@@ -92,7 +88,7 @@ public class PermissionsControllerTest extends TestContainersSuite implements Pe
     }
 
     @Test
-    void getAllPermissionsnIsNotAuthenticatedThrowsError() {
+    void getAllPermissionsIsNotAuthenticatedThrowsError() {
         final HttpRequest<Object> request = HttpRequest.GET("/");
 
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
